gui/4.1/admin-portal/monitoring/log-viewer.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer)[Next](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.1/intro/)
  *     * [Overview](https://docs.tigergraph.com/gui/4.1/intro/)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/4.1/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/4.1/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/4.1/graphstudio/design-schema)
      * [Load Data](https://docs.tigergraph.com/gui/4.1/graphstudio/load-data)
        * [Data Transformation](https://docs.tigergraph.com/gui/4.1/graphstudio/data-transformation)
      * [Explore Graph](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/augment-visualization-result)
        * [Query Status API](https://docs.tigergraph.com/gui/4.1/graphstudio/explore-graph/query-status-api)
      * Build Graph Patterns (Deprecated)
        * [Visual Query Builder](https://docs.tigergraph.com/gui/4.1/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/4.1/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/4.1/graphstudio/write-queries)
      * [Write openCypher Queries in TigerGraph](https://docs.tigergraph.com/gui/4.1/graphstudio/write-open-cypher-queries-in-tigergraph)
      * [Actions](https://docs.tigergraph.com/gui/4.1/graphstudio/actions)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/4.1/graphstudio/migrate-from-relational-database)
      * [Export and Import Solution](https://docs.tigergraph.com/gui/4.1/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/4.1/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/4.1/graphstudio/known-issues)
      * [ZoomChart Update](https://docs.tigergraph.com/gui/4.1/graphstudio/graphstudio-zoomchart-update)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/4.1/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/4.1/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/4.1/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/4.1/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/README)
        * [Queries](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/queries)
        * [Logs](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer)
      * [Management](https://docs.tigergraph.com/gui/4.1/admin-portal/management/README)
        * [License](https://docs.tigergraph.com/gui/4.1/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/4.1/admin-portal/management/user-management)
        * [Components](https://docs.tigergraph.com/gui/4.1/admin-portal/components/README)
          * [GPE](https://docs.tigergraph.com/gui/4.1/admin-portal/components/gpe)
          * [GSQL](https://docs.tigergraph.com/gui/4.1/admin-portal/components/gsql)
          * [Application Server (GUI)](https://docs.tigergraph.com/gui/4.1/admin-portal/components/gui)
          * [Kafka](https://docs.tigergraph.com/gui/4.1/admin-portal/components/kafka)
          * [Nginx](https://docs.tigergraph.com/gui/4.1/admin-portal/components/nginx)
          * [RESTPP](https://docs.tigergraph.com/gui/4.1/admin-portal/components/restpp)
          * [Change Data Capture (CDC)](https://docs.tigergraph.com/gui/4.1/admin-portal/components/cdc)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/4.1/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/4.1/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/4.1/admin-portal/security/sso-aad)
        * [SSO.OIDC via Okta](https://docs.tigergraph.com/gui/4.1/admin-portal/security/sso-oidc-okta)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/4.1/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/4.1/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/4.1/admin-portal/known-issues)
    * [Legacy Version Documentation](https://docs.tigergraph.com/gui/4.1/intro/legacy-tg-versions)


GraphStudio and Admin Portal 4.1
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 4.1](https://docs.tigergraph.com/gui/4.1/intro/)
  * Admin Portal
  * [Monitor](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/README)
  * [Logs](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/4.1/modules/admin-portal/pages/monitoring/log-viewer.adoc)
### Contents
  * [Open a log file from the file directory](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_open_a_log_file_from_the_file_directory)
  * [Search logs](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_search_logs)
  * [Read-Only Access to Logs](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_read_only_access_to_logs)
  * [Privileges](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_privileges)
  * [Access Points](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_access_points)


# Logs
### Contents
  * [Open a log file from the file directory](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_open_a_log_file_from_the_file_directory)
  * [Search logs](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_search_logs)
  * [Read-Only Access to Logs](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_read_only_access_to_logs)
  * [Privileges](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_privileges)
  * [Access Points](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_access_points)


The Logs page contains a search panel, a file directory panel, and a content panel. The content panel either displays log content or search results.
![logs monitoring page](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/logs-monitoring-page.png)
Due to IP address blocking, an error message may appear if you have an ad blocker installed on your browser. Please turn off your ad blocker when using Admin Portal.  
---  
## [](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_open_a_log_file_from_the_file_directory)Open a log file from the file directory
In the file directory panel, all machines will be listed in a tree structure. Click a machine ID to show the components, and click again to show log files and folders.
![file listing](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/file-listing.png)
Choose one single log file by clicking on it, and the content will be shown in the display panel. The title will show the machine ID and the path of the opened log file. To the right, there is a download button ![download log btn](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/download-log-btn.png) for downloading the selected log file. Loaded log lines will add to the end of the file (the latest log content) and the system will keep pulling to update the log.
Note that the display panel will only show the tail end of the chosen log file, up to 32 MB. If you wish to read the entire log file, download the file.  
---  
![display log](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/display-log.png)
## [](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_search_logs)Search logs
If your browser window is wide, you will see the search panel at the top.
![image](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/log-search-panel.png)
If your browser window is narrow, the search panel collapses. Click the ![image](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/search-btn.png) button to open it.
![log search button](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/log-search-button.png)
In the search panel, you need to provide the following three pieces of information:
  * Pattern
  * Node
  * Component


Without a pattern and at least one node and one component, the search will not be performed.
Use the expand ![image](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/expand-btn.png) or collapse ![image](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/collapse-btn.png) buttons for more space to view the log content, if necessary.
![image](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/search-result.png)
The title of each search result contains the machine ID, the file path and the number of lines of content which match the pattern. The detailed log line content will also be shown:
![image](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/single-search-result.png)
Clicking on a single search result will show the log content in the display panel and highlight the matching log line.
![image](https://docs.tigergraph.com/gui/4.1/admin-portal/_images/line-highlight-log%20\(1\).png)
## [](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_read_only_access_to_logs)Read-Only Access to Logs
As of version 4.1, TigerGraph introduces the ability to grant application developers read-only access to logs. This feature enables developers to:
  * **Debug:** Identify and resolve issues using system and GSQL query logs.
  * **Optimize Queries:** Analyze logs to fine-tune queries for better performance.
  * **Monitor System Health:** Track system activity without requiring administrative intervention.


Developers can access logs through:
  * **GraphStudio:** A user-friendly interface with log viewing, searching, and downloading features.
  * **TigerGraph Cloud Portal:** Allows developers to monitor and debug logs in real time.


### [](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_privileges)Privileges
The following privileges control access to logs in TigerGraph:
**APP_ACCESS_LOG Privilege**
`APP_ACCESS_LOG` privilege grants authorized users global read-only access to logs via GraphStudio or the Cloud Portal.
Privilege Name | Object | Plural Objects | Scope | Default Roles  
---|---|---|---|---  
APP_ACCESS_LOG | LOG | LOGS | GLOBAL | superuser, globaldesigner  
**READ_LOG Privilege**
The `READ_LOG` privilege grants **read-only access** to logs, preventing modifications while enabling monitoring and debugging.
Privilege Name | Object | Plural Objects | Scope | Default Roles  
---|---|---|---|---  
READ_LOG | LOG | LOGS | GLOBAL | None  
### [](https://docs.tigergraph.com/gui/4.1/admin-portal/monitoring/log-viewer#_access_points)Access Points
Users with the appropriate privileges can access logs through **GraphStudio** or the **TigerGraph Cloud Portal** :
  1. **View Logs:** Access real-time updates for GSQL query logs and system logs.
  2. **Search Logs:** Use the search panel to filter logs by patterns, nodes, and components.
  3. **Download Options:** Download log files for offline analysis to identify and resolve issues effectively.


  * These tools are designed to provide developers with the ability to debug, optimize queries, and monitor system health without requiring intervention from administrative users.
  * Logs are dynamically updated in real time, granting developers to track changes and identify issues promptly.
  * The access provided is strictly **read-only** , maintaining system security and log integrity.

  
---  
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


